Add images to the board

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         }
 
         .grid img {
-            width: 12.5%;
+            height: auto;
+            width: 10%;
         }
     </style>
     <title>Ecommerce</title>
@@ -25,37 +26,44 @@
 <div class="grid"></div>
 <script type="text/javascript">
     const images = [
-        'ereader_chapitre.png',
-        'ereader_cheminant.png',
-        'ereader_cnam.png',
-        'ereader_cultura.png',
-        'ereader_decitre.png',
-        'ereader_develay.png',
-        'ereader_ebooks-store.png',
-        'ereader_espacetemps.png',
-        'ereader_franceloisirs.png',
-        'ereader_furet.png',
-        'ereader_montbarbon.png',
-        'ereader_planetr.png',
-        'ereader_systeme-u.png',
-        'ereader_vivlio.png',
-        'web_bisey.png',
-        'web_chapitre.png',
-        'web_cnam.png',
-        'web_develay.png',
-        'web_ebooks-store.png',
-        'web_esmod.png',
-        'web_espacetemps.png',
-        'web_franceloisirs.png',
-        'web_furet.png',
-        'web_jaimelirestore.png',
-        'web_la-croix.png',
-        'web_librairie-jesuite.png',
-        'web_lizzie.png',
-        'web_monlibrairenumerique.png',
-        'web_montbarbon.png',
-        'web_planetr.png',
-        'web_vivlio.png'
+        'ereader_chapitre_home.png',
+        'ereader_cheminant_home.png',
+        'ereader_cnam_home.png',
+        'ereader_cultura_home.png',
+        'ereader_decitre_home.png',
+        'ereader_develay_home.png',
+        'ereader_ebooks-store_home.png',
+        'ereader_espacetemps_home.png',
+        'ereader_franceloisirs_home.png',
+        'ereader_furet_home.png',
+        'ereader_montbarbon_home.png',
+        'ereader_planetr_home.png',
+        'ereader_systeme-u_home.png',
+        'ereader_vivlio_home.png',
+        'web_bisey_home.png',
+        'web_bisey_product.png',
+        'web_chapitre_home.png',
+        'web_chapitre_product.png',
+        'web_cnam_home.png',
+        'web_develay_home.png',
+        'web_ebooks-store_home.png',
+        'web_esmod_home.png',
+        'web_espacetemps_home.png',
+        'web_franceloisirs_home.png',
+        'web_furet_home.png',
+        'web_jaimelirestore_home.png',
+        'web_jaimelirestore_product.png',
+        'web_la-croix_home.png',
+        'web_librairie-jesuite_home.png',
+        'web_lizzie_home.png',
+        'web_lizzie_product.png',
+        'web_monlibrairenumerique_home.png',
+        'web_montbarbon_home.png',
+        'web_planetr_home.png',
+        'web_planetr_product.png',
+        'web_vivlio_home.png',
+        'web_vivlio_product.png',
+        'web_vivlio_cart.png'
     ];
     window.onload = function () {
         const grid = document.querySelector('.grid');
